refactor(core): Update controllers and services to support new analytics features
- Enhanced controllers with new endpoints and methods
- Updated Driver and Vehicle entities with additional attributes
- Modified JwtTokenProvider and authentication flow
- Adjusted application properties for new services